// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar renders correctly with search by genres 1`] = `
<div
  className="sc-bdVaJa ilUIgN"
>
  <a
    className="sc-htoDjs enzMhh"
    href="/"
    onClick={[Function]}
  >
    <data-logo />
  </a>
  <p
    className="sc-bwzfXH ckkHdC"
  >
    Find your movie
  </p>
  <input
    className="sc-htpNat leAEoF"
    list="genres"
    onChange={[Function]}
    placeholder="Start typing movie title or genre"
    type="text"
  />
  <datalist
    id="genres"
  >
    <option
      value="Action"
    />
    <option
      value="Adventure"
    />
    <option
      value="Animation"
    />
    <option
      value="Comedy"
    />
    <option
      value="Crime"
    />
    <option
      value="Documentary"
    />
    <option
      value="Drama"
    />
    <option
      value="Family"
    />
    <option
      value="Fantasy"
    />
    <option
      value="History"
    />
    <option
      value="Horror"
    />
    <option
      value="Music"
    />
    <option
      value="Mystery"
    />
    <option
      value="Romance"
    />
    <option
      value="Science Fiction"
    />
    <option
      value="Thriller"
    />
    <option
      value="TV Movie"
    />
    <option
      value="War"
    />
    <option
      value="Western"
    />
  </datalist>
  <div
    className="sc-bxivhb eUiDro"
  >
    <div
      className="sc-ifAKCX iqcapW"
    >
      Search by 
    </div>
    <div
      className="sc-EHOje QURia"
    >
      <button
        className="sc-bZQynM skibW"
        onClick={[MockFunction]}
        selected={false}
      >
        Title
      </button>
      <button
        className="sc-bZQynM fyVJBT"
        onClick={[MockFunction]}
        selected={true}
      >
        Genre
      </button>
    </div>
    <a
      href="/search/genres/"
      onClick={[Function]}
    >
      <button
        className="sc-gzVnrw jAEZiU"
        onClick={[Function]}
      >
        Search
      </button>
    </a>
  </div>
</div>
`;

exports[`SearchBar renders correctly with search by title 1`] = `
<div
  className="sc-bdVaJa ilUIgN"
>
  <a
    className="sc-htoDjs enzMhh"
    href="/"
    onClick={[Function]}
  >
    <data-logo />
  </a>
  <p
    className="sc-bwzfXH ckkHdC"
  >
    Find your movie
  </p>
  <input
    className="sc-htpNat leAEoF"
    list="genres"
    onChange={[Function]}
    placeholder="Start typing movie title or genre"
    type="text"
  />
  <div
    className="sc-bxivhb eUiDro"
  >
    <div
      className="sc-ifAKCX iqcapW"
    >
      Search by 
    </div>
    <div
      className="sc-EHOje QURia"
    >
      <button
        className="sc-bZQynM fyVJBT"
        onClick={[MockFunction]}
        selected={true}
      >
        Title
      </button>
      <button
        className="sc-bZQynM skibW"
        onClick={[MockFunction]}
        selected={false}
      >
        Genre
      </button>
    </div>
    <a
      href="/search/title/"
      onClick={[Function]}
    >
      <button
        className="sc-gzVnrw jAEZiU"
        onClick={[Function]}
      >
        Search
      </button>
    </a>
  </div>
</div>
`;
